added functionality to HUD for stamina and health

--- a/templates/hud.html
+++ b/templates/hud.html
@@ -1,7 +1,11 @@
 <!-- Bars -->
 <div class="bb-hud">
- <div class="bb-bar-base bb-health"></div>
- <div class="bb-bar-base bb-stamina"></div>
+ <div class="bb-bar-base bb-health">
+  <div class="bb-health-current"></div>
+ </div>
+ <div class="bb-bar-base bb-stamina">
+  <div class="bb-stamina-current"></div>
+ </div>
 </div>
 
 <!-- Items -->
