--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,18 @@
+
+@mixin transition($transition...) {
+    -moz-transition:    $transition;
+    -o-transition:      $transition;
+    -webkit-transition: $transition;
+    transition:         $transition;
+}
+
+@mixin transition-property($property...) {
+    -moz-transition-property:    $property;
+    -o-transition-property:      $property;
+    -webkit-transition-property: $property;
+    transition-property:         $property;
+}
+
 .bb-hud {
     position: absolute;
     left: 50px;
@@ -6,20 +21,32 @@
     .bb-bar-base {
         position: absolute;
         left: 0;
+        width: 150px;
         height: 12px;
-        border: 1px solid #555;
+        background-color: #554;
+        border: 1px solid #191917;
         border-radius: 2px;
     }
 
     .bb-health {
         top: 0;
-        width: 150px;
-        background: #f0201c;
+    }
+
+    .bb-health-current {
+        width: 100%;
+        height: 100%;
+        @include transition(width 0.3s);
+        background-color: #f0201c;
     }
 
     .bb-stamina {
         top: 13px;
-        width: 150px;
-        background: #20c01c;
+    }
+
+    .bb-stamina-current {
+        width: 100%;
+        height: 100%;
+        @include transition(width 0.3s);
+        background-color: #20c01c;
     }
 }
