--- a/utils/editors/editor.css
+++ b/utils/editors/editor.css
@@ -65,3 +65,64 @@ body {
     display: inline-block;
     width: calc(100% - 30px);
 }
+
+.loading-background {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5);
+    display: none;
+}
+
+.loading {
+    position: relative;
+    left: 50%;
+    top: 50%;
+    width: 128px;
+    height: 128px;
+    margin: -64px -64px;
+    background-image: url("img/loading_orange.png");
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    -webkit-animation: spin 2s infinite ease-in-out;
+    -moz-animation: spin 2s infinite ease-in-out;
+    -ms-animation: spin 2s infinite ease-in-out;
+    -o-animation: spin 2s infinite ease-in-out;
+    animation: spin 2s infinite ease-in-out;
+}
+
+@keyframes spin {
+    from {
+        -ms-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    to {
+        -ms-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes spin {
+    from {
+        -ms-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    to {
+        -ms-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
