--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -50,3 +50,103 @@
         background-color: #20c01c;
     }
 }
+
+.bb-loading {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .7);
+    z-index: 100;
+
+    .bb-loading-icon {
+        position: relative;
+        left: 50%;
+        top: 50%;
+        width: 128px;
+        height: 128px;
+        margin: -64px -64px;
+        background-image: url("../resources/img/loading_orange.png");
+        background-position: 50% 50%;
+        background-repeat: no-repeat;
+        -webkit-animation: spin 2s infinite ease-in-out;
+        -moz-animation: spin 2s infinite ease-in-out;
+        -ms-animation: spin 2s infinite ease-in-out;
+        -o-animation: spin 2s infinite ease-in-out;
+        animation: spin 2s infinite ease-in-out;
+    }
+}
+
+.bb-loading-items {
+    position: absolute;
+    left: 50px;
+    bottom: 10px;
+    color: #ccc;
+    font-size: 12px;
+    font-family: Courier New, Courier, monospace;
+    z-index: 101;
+
+    ul {
+        margin: 0;
+        padding: 0;
+    
+        .bb-loading-done {
+            display: none;
+            font-weight: bold;
+            color: #20c01c;
+        }
+
+        .bb-loading-error {
+            display: none;
+            font-weight: bold;
+            color: #f0201c;
+        }
+    }
+
+    ul[status="done"] {
+        .bb-loading-done {
+            display: inline-block;
+        }
+    }
+
+    ul[status="error"] {
+        .bb-loading-error {
+            display: inline-block;
+        }
+    }
+}
+
+@keyframes spin {
+    from {
+        -ms-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    to {
+        -ms-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes spin {
+    from {
+        -ms-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    to {
+        -ms-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
