--- a/templates/hud.html
+++ b/templates/hud.html
@@ -1,4 +1,12 @@
-<!-- Bars -->
+<!-- Modal -->
+<div class="bb-modal">
+ <div class="bb-valign">
+  <div class="bb-box" id="bb-message">
+  </div>
+ </div>
+</div>
+
+<!-- HUD -->
 <div class="bb-hud">
  <div class="bb-bar-base bb-health">
   <div class="bb-health-current"></div>
