improved modal visibility changes

--- a/templates/hud.html
+++ b/templates/hud.html
@@ -1,5 +1,5 @@
 <!-- Modal -->
-<div class="bb-modal">
+<div class="bb-modal" hidden>
  <div class="bb-valign">
   <div class="bb-box" id="bb-message">
   </div>
