--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -57,7 +57,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, .7);
+    background-color: rgba(25, 25, 23, .7);
     z-index: 100;
 
     .bb-loading-icon {
@@ -152,11 +152,11 @@
 }
 
 .bb-modal {
-    visibility: hidden;
     position: absolute;
     display: table;
     width: 100%;
     height: 100%;
+    cursor: default;
 
     .bb-valign {
         display: table-cell;
@@ -171,7 +171,7 @@
             vertical-align: middle;
             text-align: center;
 
-            background-color: rgba(0, 0, 0, .8);
+            background-color: rgba(25, 25, 23, .9);
             border: 2px dashed #ffcc00;
             border-radius: 15px;
 
@@ -182,6 +182,10 @@
             text-transform: uppercase;
         }
     }
+}
+
+[hidden] {
+    display: none;
 }
 
 button {
